test_scores/negative_dimers/features/P07332.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P07332.pkl.xz